# grobner-basis

./: .clang-format  CMakeLists.txt  README.md
src/: monomial.h  term.h
tests/: monomial_test.h  term_test.h  tests.cpp
